--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,20 @@
 
 buildscript {
     repositories {
-        jcenter()
+//        jcenter()
+//        google()
+
+        maven{
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        maven{
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
-        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
@@ -19,7 +27,14 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+
+        maven{
+            url 'https://maven.aliyun.com/repository/google'
+        }
+        maven{
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+//        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
