--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
             abortOnError false
         }
 
+    
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
 
 
 }
