--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
+    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.fashare.activitytracker"
         minSdkVersion 15
@@ -22,7 +23,7 @@ android {
             abortOnError false
         }
 
-    
+
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
 
